Wrap contact links in relative div so that icons render in the correct location before and after breakpoint.

--- a/src/main/sidebar/sidebar.css
+++ b/src/main/sidebar/sidebar.css
@@ -2,7 +2,7 @@
   color: rgba(0, 0, 0, .5);
 }
 
-.contact {
+.icon-container {
   position: relative;
 }
 
